# geopolicy

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  rollout.py
config/: constants.py  countries.py  events.py  objectives.py
final-round/data/: sft_data_mixed_balanced.jsonl
models/: __init__.py  action.py  country.py  observation.py  state.py
server/: actions.py  app.py  environment.py  events.py  objectives.py  rewards.py  rubrics.py  scoring.py
tasks/: __init__.py  graders.py
test_runs/: run_task3_smoke.py
tests/: test_alignment.py  test_objectives.py  test_part1.py  test_part2.py  test_part3.py  test_part4.py  test_part5.py  test_part6.py  test_part7.py  test_rollout.py  test_rubrics.py  test_snapshot.py
